# neo-theano

./: .gitignore  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  release.yml
crates/theano/: Cargo.toml
crates/theano-autograd/: Cargo.toml
crates/theano-autograd/src/: amp.rs  checkpoint.rs  engine.rs  function.rs  grad_fns.rs  lib.rs  no_grad.rs  variable.rs
crates/theano-backend/: Cargo.toml
crates/theano-backend/src/: lib.rs  ops.rs
crates/theano-barracuda/: Cargo.toml
crates/theano-barracuda/src/: backend.rs  compiler.rs  device.rs  lib.rs
crates/theano-core/: Cargo.toml
crates/theano-core/src/: lib.rs  storage.rs  tensor.rs  tensor_create.rs  tensor_fmt.rs  tensor_index.rs  tensor_inplace.rs  tensor_ops.rs  tensor_view.rs
crates/theano-cpu/: Cargo.toml
crates/theano-cpu/src/: cpu_backend.rs  cpu_kernels.rs  cpu_storage.rs  lib.rs
crates/theano-cuda/: Cargo.toml
crates/theano-cuda-kernels/: Cargo.toml
crates/theano-cuda-kernels/src/: lib.rs
crates/theano-cuda/src/: allocator.rs  cuda_backend.rs  device.rs  error.rs  lib.rs  storage.rs
crates/theano-data/: Cargo.toml
crates/theano-data/src/: dataloader.rs  dataset.rs  lib.rs  sampler.rs
crates/theano-distributed/: Cargo.toml
crates/theano-distributed/src/: collectives.rs  ddp.rs  lib.rs  process_group.rs
crates/theano-jit/: Cargo.toml
crates/theano-jit/src/: graph.rs  ir.rs  lib.rs  passes.rs  trace.rs
crates/theano-metal/: Cargo.toml
crates/theano-metal/src/: device.rs  error.rs  lib.rs  metal_backend.rs  msl_kernels.rs  storage.rs
crates/theano-nn/: Cargo.toml
crates/theano-nn/examples/: autograd_bench.rs
crates/theano-nn/src/: activation.rs  batchnorm.rs  container.rs  conv.rs  conv1d.rs  dropout.rs  embedding.rs  init.rs  lib.rs  linear.rs  loss.rs  loss_extra.rs  module.rs  normalization.rs  padding.rs  pooling.rs  rnn.rs  transformer.rs
crates/theano-oneapi/: Cargo.toml
crates/theano-oneapi/src/: device.rs  error.rs  lib.rs  oneapi_backend.rs  storage.rs
crates/theano-optim/: Cargo.toml
crates/theano-optim/src/: adagrad.rs  adam.rs  lib.rs  optimizer.rs  rmsprop.rs  scheduler.rs  sgd.rs
crates/theano-python/: Cargo.toml
crates/theano-python/src/: dtype_api.rs  lib.rs  nn_api.rs  tensor_api.rs
crates/theano-quantize/: Cargo.toml
crates/theano-quantize/src/: lib.rs  observer.rs  qconfig.rs  quantize.rs
crates/theano-rocm/: Cargo.toml
crates/theano-rocm-kernels/: Cargo.toml
crates/theano-rocm-kernels/src/: lib.rs
crates/theano-rocm/src/: allocator.rs  device.rs  error.rs  lib.rs  rocm_backend.rs  storage.rs
crates/theano-serialize/: Cargo.toml
crates/theano-serialize/src/: lib.rs  onnx.rs  safetensors.rs  state_dict.rs
crates/theano-types/: Cargo.toml
crates/theano-types/src/: device.rs  dtype.rs  error.rs  layout.rs  lib.rs  shape.rs
crates/theano-wgpu/: Cargo.toml
crates/theano-wgpu/src/: device.rs  error.rs  lib.rs  storage.rs  wgpu_backend.rs  wgsl_kernels.rs
crates/theano/examples/: basic_tensor.rs
crates/theano/src/: lib.rs
docs/: api-reference.md  architecture.md  backends.md  contributing.md  getting-started.md
examples/: autograd.rs  mnist_cnn.rs  neural_network.rs
kernels/: compat.h
kernels/hip/: elementwise.hip  reduce.hip  softmax.hip
research/: DESIGN.md  README.md
research/benchmarks/: Cargo.toml
research/benchmarks/benches/: autodiff_comparison.rs
research/benchmarks/src/: lib.rs
research/enzyme-prototype/: Cargo.toml
research/enzyme-prototype/src/: lib.rs  module.rs  pytorch_api.rs
research/offload-prototype/: Cargo.toml
research/offload-prototype/src/: lib.rs
scripts/: bench_autograd.sh
