[package]
name = "theano-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CPU backend for the Theano deep learning framework"

[features]
default = ["gemm-backend"]
gemm-backend = ["gemm"]
accelerate = []
mkl = []
openblas = []

[dependencies]
theano-types = { workspace = true }
theano-backend = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
gemm = { workspace = true, optional = true }
rand = { workspace = true }
rand_distr = { workspace = true }
