[package]
name = "theano-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data loading utilities for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-core = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
