[package]
name = "theano-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neural network modules for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-core = { workspace = true }
theano-autograd = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
parking_lot = { workspace = true }
