[package]
name = "theano-oneapi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intel oneAPI backend for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-backend = { workspace = true }
thiserror = { workspace = true }
