[package]
name = "theano-rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ROCm/HIP GPU backend for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-backend = { workspace = true }
thiserror = { workspace = true }
