[package]
name = "theano-rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ROCm/HIP GPU backend for the Theano deep learning framework"

[features]
default = []
hip = []

[dependencies]
theano-types = { workspace = true }
theano-backend = { workspace = true }
theano-rocm-kernels = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
# hip-sys = { version = "0.4", optional = true }  # uncomment when hip-sys is available on crates.io
