[package]
name = "theano-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serialization for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-core = { workspace = true }
thiserror = { workspace = true }
