[package]
name = "theano-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU backend for the Theano deep learning framework"

[dependencies]
theano-types = { workspace = true }
theano-backend = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
