[package]
name = "theano-autodiff-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Benchmarks comparing tape-based vs compiler-level autodiff"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "autodiff_comparison"
harness = false
